Closed
Bug 1221067
Opened 10 years ago
Closed 10 years ago
error: no matching function for call to 'NS_NewStreamLoader'
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 45.0
People
(Reporter: aleth, Assigned: philip.chee)
References
Details
(Keywords: dogfood, regression)
Attachments
(1 file)
|
1.09 KB,
patch
|
mkmelin
:
review+
|
Details | Diff | Splinter Review |
Build bustage:
/builds/slave/tb-c-cen-lx-ntly-0000000000000/build/mailnews/addrbook/src/nsAbContentHandler.cpp:129:43: error: no matching function for call to 'NS_NewStreamLoader(nsGetterAddRefs<nsIStreamLoader>, nsCOMPtr<nsIURI>&, nsAbContentHandler* const, nsCOMPtr<nsIPrincipal>&, nsILoadInfo::<anonymous enum>, nsIContentPolicyBase::<anonymous enum>, nsIInterfaceRequestor*&)'
FYI there is an older (fixed) bug that may be similar, Bug 1071497.
| Reporter | ||
Updated•10 years ago
|
Summary: nsAbContentHandler.cpp:129:43: error: no matching function for call to 'NS_NewStreamLoader... → nsAbContentHandler.cpp:129:43: error: no matching function for call to 'NS_NewStreamLoader'
| Reporter | ||
Comment 1•10 years ago
|
||
also on OSX:
/builds/slave/tb-c-cen-m64-ntly-000000000000/build/mailnews/addrbook/src/nsAbContentHandler.cpp:123:10: error: no matching function for call to 'NS_NewStreamLoader'
on Windows:
c:/builds/moz2_slave/tb-c-cen-w32-ntly-000000000000/build/mailnews/addrbook/src/nsAbContentHandler.cpp(129) : error C2665: 'NS_NewStreamLoader' : none of the 3 overloads could convert all the argument types
Summary: nsAbContentHandler.cpp:129:43: error: no matching function for call to 'NS_NewStreamLoader' → error: no matching function for call to 'NS_NewStreamLoader'
| Reporter | ||
Comment 2•10 years ago
|
||
Likely fallout from bug 1206964.
Updated•10 years ago
|
| Assignee | ||
Comment 3•10 years ago
|
||
Assignee: nobody → philip.chee
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•10 years ago
|
||
Comment on attachment 8682537 [details] [diff] [review]
Patch v1.0 fix NS_NewStreamLoader
Bustage fix
Attachment #8682537 -
Flags: review?(mkmelin+mozilla)
Comment 5•10 years ago
|
||
Comment on attachment 8682537 [details] [diff] [review]
Patch v1.0 fix NS_NewStreamLoader
Review of attachment 8682537 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good, thx! r=mkmelin
Attachment #8682537 -
Flags: review?(mkmelin+mozilla) → review+
| Reporter | ||
Comment 6•10 years ago
|
||
https://hg.mozilla.org/comm-central/rev/f3388da5d1a5da2e6972d0c76b31e668b0bd64ae
Bug 1221067 - error: no matching function for call to 'NS_NewStreamLoader'. r=mkmelin, a=bustage fix on CLOSED TREE
| Reporter | ||
Updated•10 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 45.0
| Reporter | ||
Comment 7•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/c6eb37d7c93e also seems to change the nsIContentPolicy and the nsILoadInfo argument in some cases, are you sure that's not required here?
Flags: needinfo?(philip.chee)
| Assignee | ||
Comment 9•10 years ago
|
||
(In reply to aleth [:aleth] from comment #7)
> https://hg.mozilla.org/mozilla-central/rev/c6eb37d7c93e also seems to change
> the nsIContentPolicy and the nsILoadInfo argument in some cases, are you
> sure that's not required here?
I just did the minimum necessary. If it isn't broke don't fix it.
Also why would you want a content blocker (like ABP) block v-cards?
Also I didn't think it's worth the effort to create a new TYPE_VCARD just for one caller.
| Reporter | ||
Comment 10•10 years ago
|
||
(In reply to Philip Chee from comment #9)
> (In reply to aleth [:aleth] from comment #7)
> > https://hg.mozilla.org/mozilla-central/rev/c6eb37d7c93e also seems to change
> > the nsIContentPolicy and the nsILoadInfo argument in some cases, are you
> > sure that's not required here?
> I just did the minimum necessary. If it isn't broke don't fix it.
> Also why would you want a content blocker (like ABP) block v-cards?
> Also I didn't think it's worth the effort to create a new TYPE_VCARD just
> for one caller.
No worries, I don't know this code, I just thought I'd ask ;)
You need to log in
before you can comment on or make changes to this bug.
Description
•