Bug 1221067 - error: no matching function for call to 'NS_NewStreamLoader'. r=mkmelin, a=bustage fix on CLOSED TREE